<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FP_VerificationActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/page5"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/todo_page3_1"
        android:foregroundGravity="center"
        app:srcCompat="@drawable/radiuse2" />
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="215dp"
        android:contentDescription="@string/todo3"
        android:rotation="45"
        app:srcCompat="@drawable/phone_page4" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="233dp"
        android:layout_height="41dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="218dp"
        android:layout_marginEnd="36dp"
        android:gravity="center"
        android:text="@string/textview"
        android:textColor="#000000"
        android:textSize="22dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="34dp"
        android:text="@string/textview2"
        android:textColor="#000000"
        android:textSize="22dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="245dp"
        android:layout_height="34dp"
        android:layout_below="@id/otp_Edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-200dp"
        android:background="@drawable/radius"
        android:text="@string/log_in_page4"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        android:onClick="ChangePassword"
        />
    <Button
        android:id="@+id/button4"
        android:layout_width="109dp"
        android:layout_height="32dp"
        android:layout_below="@id/button3"
        android:layout_marginStart="63dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/radius"
        android:text="@string/Send_page4"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button5"
        android:layout_width="109dp"
        android:layout_height="32dp"
        android:layout_below="@id/button3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="58dp"
        android:background="@drawable/radius_page4"
        android:hapticFeedbackEnabled="false"
        android:onClick="Sing_in_up"
        android:text="@string/Opt_Out"
        android:textColor="#B43E41"
        android:textIsSelectable="false"
        android:textSize="18sp" />

    <com.goodiebag.pinview.Pinview
        android:id="@+id/otp_Edit_text"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="225dp"
        android:minHeight="40dp"
        app:cursorVisible="true"
        app:forceKeyboard="true"
        app:inputType="number"
        app:pinWidth="40dp" />


</RelativeLayout>