<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/page7" />
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:background="#B43E41"
        android:contentDescription="@string/todo4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="178dp"
        android:layout_height="40dp"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:layout_marginBottom="673dp"
        android:gravity="center"
        android:text="@string/txet_page6_changepass"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="290dp"
        android:ems="10"
        android:textSize="18dp"
        android:inputType="textPassword"
        android:gravity="right"
        android:hint="@string/text_page7_newpass"
        />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="362dp"
        android:textSize="18dp"
        android:ems="10"
        android:inputType="textPassword"
        android:gravity="right"
        android:hint="@string/text_page7_renewpass"
        />

    <Button
        android:id="@+id/button7"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:background="@drawable/dooone"
        android:onClick="Singin"
        />

</RelativeLayout>