<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingupActivity">

    <View
        android:layout_width="411dp"
        android:layout_height="350dp"
        android:background="@drawable/page6"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_marginTop="250dp"
        android:contentDescription="@string/todo_page3_1"
        app:srcCompat="@drawable/radiuse2"
        tools:layout_editor_absoluteX="0dp"
        android:layout_alignParentBottom="true"
        tools:layout_editor_absoluteY="203dp" />

    <com.santalu.maskedittext.MaskEditText
        android:id="@+id/editText11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="91dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="98dp"
        android:inputType="phone"
        android:maxLength="14"
        android:autofillHints=""
        android:digits="123456789"
        android:ems="10"
        android:textSize="22dp"
        android:gravity="right"
        android:hint="@string/Enter_singup_phone"
        tools:ignore="MissingClass,RtlHardcoded"
        tools:targetApi="o"
        app:met_mask="+98 ### ### ####" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="431dp"
        android:layout_marginEnd="118dp"
        android:background="@drawable/radius"
        android:onClick="SU_VerificationActivity"
        android:text="@string/button_page7_Register"
        android:textColor="#FFFFFF"
        android:textSize="22dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button8"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="483dp"
        android:layout_marginEnd="118dp"
        android:background="@drawable/radius"
        android:onClick="Sing_in_up"
        android:text="@string/text_page7_back"
        android:textColor="#FFFFFF"
        android:textSize="22dp"
        android:textStyle="bold" />
</RelativeLayout>