<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SinginActivity">

    <ImageView
        android:layout_width="411dp"
        android:layout_height="350dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/page3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="250dp"
        android:background="@drawable/radiuse2"
        android:contentDescription="@string/todo_page3_1"
        android:hapticFeedbackEnabled="false"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="203dp" />

    <com.santalu.maskedittext.MaskEditText
        android:id="@+id/editText11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="98dp"
        android:layout_marginTop="313dp"
        android:layout_marginEnd="91dp"
        android:autofillHints=""
        android:textSize="22dp"
        android:ems="10"
        android:digits="123456789"
        android:gravity="right"
        android:hint="@string/edittext_page4_phone"
        android:inputType="phone"
        android:maxLength="14"
        app:met_mask="+98 ### ### ####"
        tools:ignore="MissingClass,RtlHardcoded"
        tools:targetApi="o"
        />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="98dp"
        android:layout_marginTop="371dp"
        android:layout_marginEnd="91dp"
        android:autofillHints=""
        android:textSize="22dp"
        android:ems="10"
        android:gravity="right"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@#$%^&amp;+="
        android:hint="@string/edittext_page4_password"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="499dp"
        android:layout_marginEnd="118dp"
        android:background="@drawable/radius"
        android:onClick="Map"
        android:text="@string/button_page4_Login"
        android:textColor="#FFFFFF"
        android:textSize="22dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="442dp"
        android:layout_marginEnd="174dp"
        android:background="@drawable/radius_page4"
        android:onClick="ForgetPass"
        android:text="@string/button_forget_pass"
        android:textColor="#0E426F"
        android:textSize="16dp"
        />
    <Button
        android:id="@+id/button8"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="114dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="116dp"
        android:background="@drawable/radius"
        android:text="بازگشت"
        android:textColor="#FFFFFF"
        android:textSize="22dp"
        android:textStyle="bold"
        android:onClick="Sing_in_up"
        />


</RelativeLayout>