<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_InformationActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/rediuse1"
        android:contentDescription="@string/todo4" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:layout_marginBottom="673dp"
        android:gravity="center"
        android:text="اطلاعات کاربری"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="560dp"
        android:gravity="right"
        android:fontFamily="@font/bnazanin"
        android:hint="@string/edittext_page9_last_name" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="514dp"
        android:fontFamily="@font/bnazanin"
        android:gravity="right"
        android:hint="@string/edittext_page9_first_name" />

    <EditText
        android:id="@+id/editText13"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="463dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@#$%^&amp;+="
        android:gravity="right"
        android:hint="@string/textedit_page9_pass"
        android:inputType="textPassword" />

    <ImageView
        android:id="@+id/green"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignTop="@id/editText13"
        android:layout_marginTop="54dp"
        android:layout_marginStart="316dp"
        android:background="@drawable/circle_green"
        />
    <ImageView
        android:id="@+id/red"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignTop="@id/editText13"
        android:layout_marginTop="54dp"
        android:layout_marginStart="316dp"
        android:background="@drawable/active_dot"
        />
    <TextView
        android:id="@+id/textpassblack"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_alignTop="@id/editText13"
        android:layout_marginTop="54dp"
        android:text="تعداد کاراکتر رمز بین 8 تا 16 باشد."
        android:textColor="#000000">
    </TextView>
    <ImageView
        android:id="@+id/green1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignTop="@id/editText13"
        android:layout_marginTop="84dp"
        android:layout_marginStart="316dp"
        android:background="@drawable/circle_green"
        />
    <ImageView
        android:id="@+id/red1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignTop="@id/editText13"
        android:layout_marginTop="84dp"
        android:layout_marginStart="316dp"
        android:background="@drawable/active_dot"
        />
    <TextView
        android:id="@+id/textpassblack1"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_alignTop="@id/editText13"
        android:layout_marginTop="84dp"
        android:text="از حروف بزرک استفاده شود."

        android:textColor="#000000">
    </TextView>
    <ImageView
        android:id="@+id/green2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignTop="@id/editText13"
        android:layout_marginTop="114dp"
        android:layout_marginStart="316dp"
        android:background="@drawable/circle_green"
        />
    <ImageView
        android:id="@+id/red2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignTop="@id/editText13"
        android:layout_marginTop="114dp"
        android:layout_marginStart="316dp"
        android:background="@drawable/active_dot"
        />

    <TextView
        android:id="@+id/textpassblack2"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="از کاراکتر @،#،!،$،^،%،+،= استفاده شود."
        android:layout_alignTop="@id/editText13"
        android:layout_marginTop="114dp"
        android:textColor="#000000">
    </TextView>

    <EditText
        android:id="@+id/editText14"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="310dp"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/textedit_page9_re_pass"
        android:inputType="textPassword" />


    <EditText
        android:id="@+id/user_Email"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="256dp"
        android:gravity="right"
        android:hint="@string/user_Email" />

    <Button
        android:id="@+id/button7"
        android:layout_width="35dp"
        android:layout_height="41dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/back"
        android:onClick="SU_VerificationActivity" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="117dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="117dp"
        android:background="@drawable/radius"
        android:onClick="Sing_in"
        android:text="@string/button_page7_Register"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        />
</RelativeLayout>