<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="335dp"
        android:background="@drawable/page4"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="529dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/todo_page3_1"
        app:srcCompat="@drawable/radiuse2"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="203dp" />

    <com.santalu.maskedittext.MaskEditText
        android:id="@+id/editText11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="91dp"
        android:layout_marginTop="375dp"
        android:layout_marginEnd="98dp"
        android:ems="10"
        android:gravity="right"
        android:textSize="18dp"
        android:hint="@string/Enter_fp_Phone"
        android:inputType="phone"
        android:maxLength="14"
        android:digits="123456789"
        app:met_mask="+98 ### ### ####"
        tools:ignore="MissingClass,RtlHardcoded" />

    <com.santalu.maskedittext.MaskEditText
        android:id="@+id/Enter_fp_Email"
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginTop="375dp"
        android:layout_marginEnd="98dp"
        android:ems="10"
        android:gravity="right"
        android:textSize="18dp"
        android:hint="@string/Enter_fp_Email"
        android:inputType="textEmailAddress"
        tools:ignore="MissingClass,RtlHardcoded" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="115dp"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="458dp"
        android:layout_marginEnd="115dp"
        android:layout_marginRight="115dp"
        android:background="@drawable/radius"
        android:onClick="FP_VerificationActivity"
        android:text="@string/button_sendcode"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button8"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="115dp"
        android:layout_marginTop="516dp"
        android:layout_marginEnd="115dp"
        android:background="@drawable/radius"
        android:onClick="Singin"
        android:text="بازگشت"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="18dp"
        android:layout_marginTop="270dp"
        android:text="روش ارسال کد اعتبار سنجی را انتخاب کنید"
        android:textAlignment="center"
        android:textColor="#000000"
        />

    <RadioGroup
        android:id="@+id/radioGrpup"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="300dp">
        <RadioButton
            android:id="@+id/CH_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:layout_gravity="right"
            android:textSize="18dp"
            android:text="تلفن"
            android:layoutDirection="rtl"
            />
        <RadioButton
            android:id="@+id/CH_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:layout_gravity="right"
            android:text="ایمیل"
            android:layoutDirection="rtl"
            android:textSize="18dp"/>
    </RadioGroup>
</RelativeLayout>